done search index

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               ><img
                 src="images/pokemonshowdownbeta.png"
                 alt="Pok&eacute;mon Showdown! (beta)"
-              />Github</a
+              />Trainer Sheet</a
             >
           </li>
           <li><a class="button" href="/">Pok&eacute;dex</a></li>
@@ -66,12 +66,6 @@
               >Download</a
             >
           </li>
-          <li>
-            <a class="button nav-last" href="src/resources.html"
-              >Trainer Sheet</a
-            >
-          </li>
-          <li />
         </ul>
         <div style="clear: both"></div>
       </div>
